# ML-AI

./: .gitignore  FINAL_SENIOR_AIML_ROADMAP.md  LESSON-TEMPLATE.md  Stage2_LLM_Complete_Lesson - Simple.md  Stage2_LLM_Complete_Lesson.md  Stage2_LLM_Complete_Lesson_Layman_Template_Rewrite.md
Stage-0-Production-Foundation-Reset/P0-production-ai-api/: .dockerignore  Dockerfile  README.md  ROLLBACK.md  pyproject.toml
Stage-0-Production-Foundation-Reset/P0-production-ai-api/.github/workflows/: ci.yml
Stage-0-Production-Foundation-Reset/P0-production-ai-api/docs/: architecture.md  runbook.md
Stage-0-Production-Foundation-Reset/P0-production-ai-api/scripts/: analyze_jobs.py  deploy_stub.ps1  run_smoke_test.py
Stage-0-Production-Foundation-Reset/P0-production-ai-api/src/app/: config.py  main.py
Stage-0-Production-Foundation-Reset/P0-production-ai-api/tests/: conftest.py
Stage-0-Production-Foundation-Reset/P0-production-ai-api/tests/api/: test_documents.py  test_health.py  test_metrics.py  test_summarize.py
Stage-0-Production-Foundation-Reset/P0-production-ai-api/tests/service/: test_costing.py
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/: .gitignore  README.md  pyproject.toml  requirements.txt
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/boosting/: status.json
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/business/: business_decisions.json
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/classification/: calibrated_model.joblib  metrics.json  model.joblib
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/data_quality/: data_quality_report.json
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/leakage/: leakage_report.json
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/artifacts/llm_benchmark/: llm_vs_classical_benchmark.json
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/docs/: architecture.md  coverage-map.md  learning-flow.md  production-architecture-flow.md  stage1-implementation-map.md  structure-guide.md
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/scripts/: generate_data.py  run_api.py  train_models.py
Stage-1-Practical-ML-Foundations/P1-customer-health-ml-system/tests/: test_api_service.py  test_data_generation.py
Stage-1-Practical-ML-Foundations/world-cricket-ml-foundations/: README.md  pyproject.toml  requirements.txt
Stage-1-Practical-ML-Foundations/world-cricket-ml-foundations/artifacts/: model_registry.json
Stage-1-Practical-ML-Foundations/world-cricket-ml-foundations/docs/: architecture.md  coverage-map.md  learning-flow.md  stage1-implementation-map.md
Stage-1-Practical-ML-Foundations/world-cricket-ml-foundations/scripts/: fetch_data.py  run_api.py  train_models.py
Stage-1-Practical-ML-Foundations/world-cricket-ml-foundations/tests/: test_api_service.py  test_benchmarks.py  test_dataset_pipeline.py
Stage-2-LLM-Foundations-for-Real-Applications/: CLAUDE.md  (+29 more)
Stage-2-LLM-Foundations-for-Real-Applications/ticket-ops-api/: README.md  pyproject.toml
Stage-2-LLM-Foundations-for-Real-Applications/ticket-ops-api/app/: __init__.py  config.py  main.py
Stage-2-LLM-Foundations-for-Real-Applications/ticket-ops-api/docs/: architecture-notes.md  capability-boundary.md
Stage-2-LLM-Foundations-for-Real-Applications/ticket-ops-api/scripts/: maxtokens_experiment.py  measure_prompt_tokens.py  temperature_experiment.py
Stage-2-LLM-Foundations-for-Real-Applications/ticket-ops-api/tests/: conftest.py
(+164 files in other folders)
