[project]
name = "p0-production-ai-api"
version = "0.1.0"
description = "Stage 0 capstone service implementing production API foundations for AI/ML."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.34,<0.35",
  "pydantic-settings>=2.8,<3.0",
  "httpx>=0.28,<0.29",
  "numpy>=2.2,<3.0",
  "pandas>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

