[project]
name = "p1-customer-health-ml-system"
version = "0.1.0"
description = "Stage 1 capstone for practical ML foundations."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.34,<0.35",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "numpy>=2.2,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]
embeddings = [
  "sentence-transformers>=3.4,<4.0",
]
boosting = [
  "xgboost>=2.1,<3.0",
  "lightgbm>=4.6,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p1_customer_health"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
