[project]
name = "world-cricket-ml-foundations"
version = "0.1.0"
description = "Stage-1 practical ML foundations capstone built on world cricket team data."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.34,<0.35",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "numpy>=2.2,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]
boosting = [
  "xgboost>=2.1,<3.0",
  "lightgbm>=4.6,<5.0",
]
onnx = [
  "skl2onnx>=1.18,<2.0",
  "onnxruntime>=1.20,<2.0",
]
imbalanced = [
  "imbalanced-learn>=0.12,<1.0",
]
all = [
  "xgboost>=2.1,<3.0",
  "lightgbm>=4.6,<5.0",
  "skl2onnx>=1.18,<2.0",
  "onnxruntime>=1.20,<2.0",
  "imbalanced-learn>=0.12,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_cricket_ml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
